<resources>
    <string name="app_name">Mechie</string>
    <string name="app_version">Version Alpha 1.0b</string>
    <string name="choose_subject">&lt;---- Choose a subject in the navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="AISI_prompt">Select an AISI Number</string>
    <string name="treatments_prompt">Select a treatment</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="buckling_criteria">Buckling Criteria (L𝒻 &#60; 2.63(D/α):</string>
    <string name="source_icon_source">Source <a href="https://openclipart.org/detail/278694/gear-wrench-icon"> </a></string>
    <string name="source_icon_policy">Copyright policy <a href="https://openclipart.org/policies"> </a></string>
    <string name="about_mechie"><b>MECHIE</b> is a general purpose tool for mechanical engineers with
        information on concepts throughout multiple disciplines, physical constants, equations,
        and multiple tools such as a dimensionless number calculator and a hardness converter.</string>
    <string name="about_disclaimer">All the information, data, equations, constants, calculations, etc
        presented in this application are to be used at the owner\'s discretion. The programmer is
        not liable nor responsible for any damages or losses incurred from using this information. It is
        expressly understood that the user understands the risk of continued use of this information
        in an \'as-is'\ basis.</string>
    <string name="about_sources">Much of the conceptual information contained in this application was
        comes from Wikipedia.com and its various sources, while most of the data (thermal coefficients,
        densities, numbers, etc) was sourced from Matweb.com and EngineeringToolbox.com.</string>
    <string name="copyleft_title">Use of the information presented in this app is subject to the following terms:</string>
    <string name="copyleft_statement"><b>MECHIE</b> grants the user unlimited, personal use of any
        information presented in this app, including, but not limited to all images, equations,
        numbers, calculations, text, and other assets, as all information was collected from
        various open sources, be it offline or online databases.</string>
    <string name="momentofinertia_about_1">The moment of inertia, otherwise known as the angular
        mass or rotational inertia, of a rigid body is a tensor that determines the torque needed
        for a desired angular acceleration about a rotational axis; similar to how mass determines
        the force needed for a desired acceleration. It depends on the body\'s mass distribution and
        the axis chosen, with larger moments requiring more torque to change the body\'s rotation rate.
        It is an extensive (additive) property: for a point mass the moment of inertia is just the mass
        times the square of the perpendicular distance to the rotation axis. The moment of inertia of
        a rigid composite system is the sum of the moments of inertia of its component subsystems
        (all taken about the same axis). Its simplest definition is the second moment of mass with
        respect to distance from an axis. For bodies constrained to rotate in a plane, only their
        moment of inertia about an axis perpendicular to the plane, a scalar value, matters. For
        bodies free to rotate in three dimensions, their moments can be described by a symmetric 3 × 3
        matrix, with a set of mutually perpendicular principal axes for which this matrix is diagonal
        and torques around the axes act independently of each other.</string>
    <string name="momentofinertia_definition_1">Moment of Inertia <b><i>I</i></b> is defined as the ratio of
        the net angular momentum <b><i>L</i></b> of a system to its angular velocity <b><i>ω</i></b> around a
        principle axis, that is</string>
    <string name="momentofinertia_definition_2">If the angular momentum of a system is constant, then
        as the moment of inertia decreases, the angular velocity must increase. An example of this can
        be seen when spinning figure skaters pull in their outstretched arms, or divers curl their
        bodies into a tuck position during a dive, to spin faster. If the shape of the body does not
        change, then its moment of inertia appears in Newton\'s Law of Motion as the ratio of an
        applied torque <b><i>τ</i></b> on a body to the angular acceleration <b><i>α</i></b> around a principle
        axis, that is</string>
    <string name="momentofinertia_definition_3">For a simple pendulum, this definition yields a
        formula for the moment of inertia in terms of the mass <b><i>m</i></b> of the pendulum and its
        distance <b><i>r</i></b> from the pivot point as,</string>
    <string name="momentofinertia_definition_4">Thus, moment of inertia depends on both the mass of
        a body and its geometry, or shape, as defined by the distance to the axis of rotation. This
        simple formula generalizes to define moment of inertia for an arbitrarily shaped body as the
        sum of all the elemental point masses <b>d<i>m</i></b> each multiplied by the square of its
        perpendicular distance <b><i>r</i></b> to an axis <b><i>k</i></b>. In general, given an object of mass
        <b><i>m</i></b>, an effective radius <b><i>k</i></b> can be defined for an axis through its center of mass,
        with such a value that its moment of inertia is</string>
    <string name="momentofinertia_definition_5">where <b><i>k</i></b> is known as the radius of gyration.</string>
    <string name="castiglianosTheorem_about_1">Named after the Italian mathematician and physicist,
        Carlo Alberto Castigliano, Castigliano\'s Method describes a method to determine the
        deflections of beams. Determining the deflection of beams typically requires repeated
        integration of singularity functions and/or superposition, Castigliano\'s Method allows
        determination of deflection by using the strain energies located at the point of application
        of the forces on the beam. In addition, this method allows calculation of deflection of
        beams with changing cross-sectional areas.</string>
    <string name="castiglianosTheorem_about_2">Note that the force mentioned in the two theorems
        below can refer to either a point force or a couple (moment), and the displacement
        can refer to either translation or angular rotation.</string>
    <string name="castiglianosTheorem_about_3">The first partial derivative of the total internal
        energy (strain energy) in a structure with respect to any particular deflection component
        at a point is equal to the force applied at that point and in the direction corresponding
        to that deflection component.</string>
    <string name="castiglianosTheorem_first_2">This theorem applies to both linearly and nonlinearly
        elastic structures in which the temperature is constants and the supports are not yielding.</string>
    <string name="castiglianosTheorem_second_1">The first partial derivative of the total internal
        energy in a structure with respect to the force applied at any point is equal to the deflection
        at the point of application of that force in the direction of its line of action.</string>
    <string name="castiglianosTheorem_second_2">This theorem applies only to linearly elastic structures
        with constant temperature and non-yielded supports.</string>
    <string name="castiglianosTheorem_example_1">Given a thin, straight, cantilevered beam with a
        vertical load P at the end, the displacement δ can be found using Castigliano\'s Second
        Theorem:</string>
    <string name="castiglianosTheorem_example_2">where E is the Modulus of Elasticity, I is the
        second moment of area of the cross-section, and M(x) = Px is the equation for the internal
        moment at a point that\'s x distance from the end, therefore:</string>
    <string name="castiglianosTheorem_example_3">The resulting formula is the standard formula
        applicable only to cantilever beams under end loads.</string>
    <string name="galvanicCorrosion_about">Galvanic corrosion (or bimetallic corrosion is an
        electrochemical process in which a metal corrodes when in electrical contact with another,
        in the presence of an electrolyte. When two dissimilar metals come in contact with an
        electrolyte, one metal acts at an anode while the other acts as a cathode. The electropotential
        difference between the two metals is the force driving the rate at which the anode dissolves
        into the electrolyte. The electropotential difference can be indicated by the relative
        positions of the two metals in the <b>Galvanic Series</b>.</string>
    <string name="galvanicSeries_about">The Galvanic Series (or electropotential series) ranks the
        nobility of metals and semi-metals. Metals experience galvanic corrosion when
        submerged in an electrolyte while also connected to an external conductor. In terms of
        the Galvanic Series, it shows that the less noble of the two connected metals is the one
        to experience corrosion. In effect, the less noble metal has a lower electrode potential,
        and thus functions as the anode within the electrolyte device.</string>
    <string name="galvanicSeries_example_1">One fantastic example of galvanic corrosion occurred
        in the Statue of Liberty in the 1980s, when a regular maintenance check revealed that
        corrosion had taken place between the outer copper skin and the wrought iron support
        structure. The problem had been anticipated when the statue was built, bu the insulation
        layer of shellac between the two metals (to prevent corrosion) had failed over time, resulting
        in rusting of the iron supports. A complete disassembly of the statue replaced the original
        insulation with polytetrafluoroethylene (PFTE).</string>
    <string name="galvanicSeries_example_2">As an example, if zinc were in contact with silver
        and submerged in a salt-water solution, the zinc would corrode, as it is further down the
        list, thus more anodic, and thus will transfer ions to the silver.</string>
    <string-array name="concepts_mechanics">
        <item>Castigliano\'s Method</item>
        <item>Hooke\'s Law</item>
        <item>Modified Goodman Failure Theory</item>
        <item>Moment of Inertia</item>
        <item>Soderberg Failure Theory</item>
        <item>Von-Mises (Tresca) Failure Theory</item>
    </string-array>
    <string-array name="concepts_materials">
        <item>Ceramics and Glasses</item>
        <item>Crystallography</item>
        <item>Galvanic Corrosion</item>
        <item>Metallurgy</item>
        <item>Nanotechnology</item>
        <item>Polymers</item>
    </string-array>
    <string-array name="concepts_chemistry">
        <item>Acids/Bases</item>
        <item>Atomic Structure</item>
        <item>Avogadro\'s Law</item>
        <item>Beer-Lampert Law</item>
        <item>Boyle\'s Law</item>
        <item>Charles\'s Law</item>
        <item>Gibb\'s Free Energy</item>
        <item>Henry\'s Law</item>
        <item>Hess\'s Law</item>
        <item>Ideal Gas Law</item>
        <item>Le Chatelier\'s Principle</item>
        <item>Lewis Structure</item>
        <item>Orbital Theory</item>
        <item>Periodic Table</item>
        <item>Raoult\'s Law</item>
        <item>Stoichiometry</item>
    </string-array>
</resources>