<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/card_view"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:cardElevation="3dp"
            android:padding="8dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="3dp"
            app:cardBackgroundColor="@color/colorAccentBlue">

            <katex.hourglass.in.mathlib.MathView
                android:gravity="center"
                android:id="@+id/formula1"
                app:setClickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:setTextSize="14dp"
                app:setTextColor="@android:color/white"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:background="@color/colorAccent"
                    android:padding="8dp"
                    android:textSize="10pt"
                    android:text="Overview"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/castiglianosTheorem_about_1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/castiglianosTheorem_about_2" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:background="@color/colorAccent"
                    android:padding="8dp"
                    android:textSize="10pt"
                    android:text="Castigliano's First Theorem"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/castiglianosTheorem_about_3"
                    android:textStyle="italic"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/castiglianosTheorem_first_2" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:background="@color/colorAccent"
                    android:padding="8dp"
                    android:textSize="10pt"
                    android:text="Castigliano's Second Theorem"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/castiglianosTheorem_second_1"
                    android:textStyle="italic"/>
                <katex.hourglass.in.mathlib.MathView
                    android:gravity="center"
                    android:id="@+id/formula2"
                    app:setClickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:setTextSize="12dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/castiglianosTheorem_second_2" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:background="@color/colorAccent"
                    android:padding="8dp"
                    android:textSize="10pt"
                    android:text="Example"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/castiglianosTheorem_example_1" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/cantilever_beam"/>
                <katex.hourglass.in.mathlib.MathView
                    android:gravity="center"
                    android:id="@+id/formula3"
                    app:setClickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:setTextSize="12dp" />
                <katex.hourglass.in.mathlib.MathView
                    android:gravity="center"
                    android:id="@+id/formula4"
                    app:setClickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:setTextSize="12dp" />
                <katex.hourglass.in.mathlib.MathView
                    android:gravity="center"
                    android:id="@+id/formula5"
                    app:setClickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:setTextSize="12dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/castiglianosTheorem_example_2" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/castiglianosTheorem_example_3" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>

